--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -1,6 +1,9 @@
 body {
     font-family: sans-serif;
     font-size: 1.5rem;
+    background-color:black;
+    color: white;
+    text-align: center;
 }
 
 img {
@@ -31,4 +34,43 @@ section {
 
 #greeting:empty {
     display: none;
+}
+
+
+
+.rainbow-button {
+    margin: 30px auto 30px auto;
+    padding: 10px 5px;
+    height: 40px;
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 20%, #FC4F4F 40%, #f200ff 60%, #9000ff 80%, #00C0FF 100%);
+    border-radius: 10px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-weight:bold;
+    font-size:2vw;
+    color: rgba(0, 0, 0, 1);
+}
+
+.rainbow-button:after {
+    content: attr(data-text);
+    text-transform:uppercase;
+    border-radius: 7px;
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+    color: white;
+    background-color: rgba(0, 0, 0, 1);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+.rainbow-button:hover {
+    animation:slidebg 2s linear infinite;
+}
+
+@keyframes slidebg {
+    to {
+        background-position:20vw;
+    }
 }
