Staker table neumorphic2

--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -91,7 +91,6 @@ section {
     background-color:#E0E5EC;
     box-shadow: 9px 9px 16px rgb(163,177,198,0.6), 
         -9px -9px 16px  rgba(255,255,255, 0.5);
-
 }
 
 form {
@@ -115,5 +114,14 @@ label {
 
 table {
     margin: 0px auto 0px auto;
+    padding-right: 20px;
     width: 100%;
+}
+
+.deleteButton {
+    border-color: red;
+    border-radius: 5px;
+    background-color: #E0E5EC;
+    box-shadow: 9px 9px 16px rgb(163,177,198,0.6), 
+    -9px -9px 16px  rgba(255,255,255, 0.5);
 }
