--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -18,9 +18,42 @@ img {
     margin: auto;
 }
 
+input {
+    border: none;
+    outline:none;
+    background-color:#E0E5EC;
+    height: 30px;
+    width: 100%;
+    border-radius: 10px;
+    padding-left: 10px;
+    margin-left: -10px;
+    box-shadow: inset 7px 7px 7px rgb(163,177,198,0.6), 
+                inset -7px -7px 7px  rgba(255,255,255, 0.5);
+}
+
+textarea {
+    border: none;
+    outline:none;
+    background-color:#E0E5EC;
+    height: 80px;
+    width: 95%;
+    max-width: 95%;
+    border-radius: 10px;
+    padding: 15px;
+    margin-left: -10px;
+    box-shadow: inset 7px 7px 7px rgb(163,177,198,0.6), 
+                inset -7px -7px 7px  rgba(255,255,255, 0.5);
+}
+
 .key-flip-video {
     margin-top: 3%;
+    width: 100%;
+}
+
+.still-alive-video {
+    margin: 0 auto 0 auto;
     width: 90%;
+    display: none;
 }
 
 
@@ -66,8 +99,9 @@ section {
     justify-content:center;
     font-weight:bold;
     font-size: 1em;
-    box-shadow: 9px 9px 16px rgb(163,177,198,0.6), -9px -9px 16px  rgba(255,255,255, 0.5);
-}
+    box-shadow: 9px 9px 16px rgb(163,177,198,0.6), 
+        -9px -9px 16px  rgba(255,255,255, 0.5);
+    }
 
 .rainbow-button:after {
     content: attr(data-text);
@@ -83,12 +117,16 @@ section {
 }
 
 .rainbow-button:hover {
+    animation:slidebg 10s linear infinite;
+}
+
+.trigger-animation {
     animation:slidebg 2s linear infinite;
 }
 
 @keyframes slidebg {
     to {
-        background-position:20vw;
+        background-position:120vw;
     }
 }
 
@@ -109,17 +147,13 @@ section {
 
 form {
     padding: 0 50px 0 50px;
-}
-
-input {
-    width: 100%;
+    line-height: 2.2;
 }
 
 span {
     display: block;
     overflow: hidden;
-    padding-right: 10px;
-    padding-left: 20px;
+    padding: 0 10px 5px 25px;
 }
 
 label {
