--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -1,9 +1,13 @@
 body {
-    font-family: sans-serif;
+    font-family: "Tahoma";
     font-size: 1.5rem;
     background-color:#E0E5EC;
+    /* background-image is set in index.html */
+    background-attachment: fixed;
+    background-size: cover;
     color: black;
     text-align: center;
+    margin-bottom: 80px;
 }
 
 h2 {
@@ -21,7 +25,7 @@ img {
 input {
     border: none;
     outline:none;
-    background-color:#E0E5EC;
+    background: rgb(224,229,236,0);
     height: 30px;
     width: 100%;
     border-radius: 10px;
@@ -34,7 +38,7 @@ input {
 textarea {
     border: none;
     outline:none;
-    background-color:#E0E5EC;
+    background-color: rgb(224,229,236,0);    ;
     height: 80px;
     width: 95%;
     max-width: 95%;
@@ -121,7 +125,7 @@ section {
 }
 
 .trigger-animation {
-    animation:slidebg 2s linear infinite;
+    animation:slidebg 10s linear infinite;
 }
 
 @keyframes slidebg {
@@ -138,10 +142,14 @@ section {
     width: 50%;
     min-width: 700px;
     border-radius: 20px;
-    background: rgb(239,238,238);
-    background-color:#E0E5EC;
+    background: rgb(224,229,236,0.8);
+    backdrop-filter: blur(8px);
     box-shadow: 9px 9px 16px rgb(163,177,198,0.6), 
         -9px -9px 16px  rgba(255,255,255, 0.5);
+}
+
+.panel::before{
+
 }
 
 
