--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -134,7 +134,15 @@ section {
     display: none;
 }
 
-
+.error-div {
+    width: 60%;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 10px;
+    margin: 5px auto;
+    padding: 10px;
+    background: rgba(255, 0, 0, 0.5);
+}
 
 .rainbow-button {
     margin: 20px auto 20px auto;
