Remove awkward space next to top up explainer when not authed

--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -227,7 +227,7 @@ section {
     text-align: start;
     font-size: 1.3rem;
     padding: 15px 30px;
-    margin: 0 40px 0 0;
+    margin: 0;
 }
 
 
