--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -12,11 +12,14 @@ body {
 }
 
 .eventHorizon {
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
     justify-content: center;
-    width: 80%;
-    min-width: 550px;
+    width: 90%;
     max-width: 800px;
+}
+
+h1 {
+    font-size: 7vw;
 }
 
 h2 {
@@ -24,14 +27,22 @@ h2 {
     margin-bottom: 5px;
 }
 
-p {
-    margin: 10px 0;
-    line-height: 2rem;
-}
-
 h3 {
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+h4 {
+    font-size: 4vw;
+}
+
+p {
+    margin: 10px 0;
+    font-size: 4vw;
+}
+
+.regularly-verify-text {
+    display: none;
 }
 
 
@@ -78,6 +89,7 @@ textarea {
 
 .key-flip-video {
     margin-top: 3%;
+    margin-bottom: 3%;
     width: 90%;
 }
 
@@ -112,8 +124,8 @@ textarea {
 }
 
 .start-page-button-div {
-    display: none;
-    margin: 0 5% 2% 5%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 section {
@@ -164,7 +176,7 @@ section {
 }
 
 .rainbow-button {
-    margin: 20px auto 20px auto;
+    margin: 10px auto;
     padding: 10px 5px;
     height: 40px;
     background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 20%, #FC4F4F 40%, #f200ff 60%, #9000ff 80%, #00C0FF 100%);
@@ -207,7 +219,7 @@ section {
 
 
 .panel {
-    margin: 30px 0 40px 0;
+    margin: 20px 0 20px 0;
     padding: 10px;
     line-height: 2;
     border-radius: 20px;
@@ -223,37 +235,25 @@ section {
     padding: 15px 30px;
 }
 
-.explainer-next-to-wallet {
-    text-align: start;
-    font-size: 1.3rem;
-    padding: 15px 30px;
-    margin: 0;
-}
-
 
 .description-and-wallet {
-    display: flex;
-    justify-content: center;
+    display: block;
     align-items: center;
-    margin: 10px auto;
 }
 
 .description {
-    margin-left: 10px;
-    margin-right: 20px;
-    text-align: left;
+    margin: 0 10px;
 }
 
-.wallet-in-app {
+.wallet {
     color:rgb(255, 255, 255);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    max-width: 500px;
     margin: 20px auto;
     padding: 30px 10px 30px 10px;
     line-height: 1;
-    width: 50%;
-    min-width: 350px;
     border-radius: 20px;
     background: rgba(38, 0, 255, 0.7);
     backdrop-filter: blur(8px);
@@ -343,4 +343,41 @@ table {
     border: solid rgb(212, 16, 230);
     /* border color lightened by 33% */
     background-color:rgba(242, 165, 249, 0.66);
+}
+
+
+
+/* mobile layout */
+@media screen and (min-width: 700px) {
+    h1 {
+        font-size: 32pt;
+    }
+
+    h4 {
+        font-size: 20pt;
+    }
+    
+    p {
+        font-size: 16pt;
+    }
+
+    /* hide hint to regularly verify if scree is too small */
+    .regularly-verify-text {
+        display: block;
+    }
+
+    .description-and-wallet {
+        display: flex;
+    }
+
+    .full-child-wallet {
+        width: 50%;
+    }
+
+    .description {
+        width: 50%;
+        text-align: left;
+    }
+    
+
 }
