--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -99,6 +99,14 @@ textarea {
     display: none;
 }
 
+.big-still-alive-button{
+    display: none !important;
+}
+
+.small-still-alive-button {
+    display: flex;
+}
+
 .loading-video{
     z-index: -1;
     width: 80px;
@@ -116,7 +124,7 @@ textarea {
 
 
 .back-button-video{
-    width: 100px;
+    width: 14vw;
 }
 
 .back-button-big {
@@ -229,6 +237,20 @@ section {
         -9px -9px 16px  rgba(255,255,255, 0.5);
 }
 
+.hacker-console {
+    background: rgba(0, 0, 0, 0.8);
+    height: 73vh;
+    overflow: scroll;
+}
+
+.console-text {
+    color: rgb(0, 255, 0);
+    font-family: monospace;
+    font-size: 12pt;
+    line-height: 1.3;
+    white-space: pre-wrap;
+}
+
 .explainer {
     text-align: start;
     font-size: 1.3rem;
@@ -276,7 +298,7 @@ section {
 }
 
 form {
-    padding: 0 50px 0 50px;
+    padding: 0 5vw;
     line-height: 1.8;
 }
 
@@ -377,6 +399,23 @@ table {
     .description {
         width: 50%;
         text-align: left;
+    }
+
+    form {
+        padding: 0 50px;
+        line-height: 1.8;
+    }
+
+    .back-button-video{
+        width: 100px;
+    }
+
+    .small-still-alive-button {
+        display: none;
+    }
+    
+    .big-still-alive-button{
+        display: flex !important;
     }
     
 
