--- a/src/hackathon_assets/assets/main.css
+++ b/src/hackathon_assets/assets/main.css
@@ -218,7 +218,7 @@ section {
     border-radius: 7px;
     width: calc(100% + 10px);
     height: calc(100% + 10px);
-    color: rgb(0, 0, 0);
+    color: black;
     background-color: #E0E5EC;
     display:flex;
     align-items:center;
